--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
         <div class="row">
           <div class="col-md-12">
             <p>
-                Copyright © 2020 Company Name
-                - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a>
+                Copyright © 2023
+                - Template by: <a href="https://www.phpjabbers.com/">AMMIR>>>MAJEED</a>
             </p>
           </div>
         </div>
