--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <div class="col-md-12">
             <p>
                 Copyright © 2023
-                - Template by: <a href="https://www.phpjabbers.com/">AMMIR>>>MAJEED</a>
+                - Template by: <a href="">AMMIR...MAJEED</a>
             </p>
           </div>
         </div>
